@@ -10,6 +10,7 @@ import it.pagopa.pn.delivery.middleware.notificationdao.NotificationCostEntityDa
 import it.pagopa.pn.delivery.models.InternalNotification;
 import it.pagopa.pn.delivery.models.InternalNotificationCost;
 import it.pagopa.pn.delivery.models.InternalPaymentEvent;
+import it.pagopa.pn.delivery.models.internal.notification.NotificationRecipient;
 import it.pagopa.pn.delivery.pnclient.datavault.PnDataVaultClientImpl;
 import it.pagopa.pn.delivery.svc.authorization.AuthorizationOutcome;
 import it.pagopa.pn.delivery.svc.authorization.CheckAuthComponent;
@@ -40,7 +41,6 @@ class PaymentEventsServiceTest {
     public static final String RECIPIENT_INTERNAL_ID = "recipientInternalId";
     private static final Integer PAYMENT_AMOUNT = 1200;
     private static final String PAYMENT_SOURCE_CHANNEL_PA = "PA";
-    private static final String PAYMENT_SOURCE_CHANNEL_EXTERNAL_REGISTRY = "EXTERNAL_REGISTRY";
     @Mock
     private PaymentEventsProducer paymentEventsProducer;
     @Mock
@@ -243,7 +243,7 @@ class PaymentEventsServiceTest {
         // Then
         InternalPaymentEvent internalPaymentEvent = InternalPaymentEvent.builder()
                 .paymentDate( Instant.parse( PAYMENT_DATE_STRING ) )
-                .paymentType( PnDeliveryPaymentEvent.PaymentType.F24 )
+                //.paymentType( PnDeliveryPaymentEvent.PaymentType.F24 )
                 .paymentAmount( PAYMENT_AMOUNT )
                 .paymentSourceChannel(PAYMENT_SOURCE_CHANNEL_PA)
                 .iun( IUN )
@@ -338,16 +338,15 @@ class PaymentEventsServiceTest {
 
     private InternalNotification createInternalNotification() {
         NotificationRecipient notificationRecipient = createRecipient();
-        return new InternalNotification(FullSentNotificationV20.builder()
-                .iun( IUN )
-                .subject("Subject 01")
-                .senderPaId( SENDER_PA_ID )
-                .notificationStatus( NotificationStatus.ACCEPTED )
-                .recipients( Collections.singletonList(notificationRecipient))
-                .recipientIds(List.of(RECIPIENT_INTERNAL_ID))
-                .sourceChannel(X_PAGOPA_PN_SRC_CH)
-                .build()
-        );
+        InternalNotification internalNotification = new InternalNotification();
+        internalNotification.setIun(IUN);
+        internalNotification.setSubject("Subject 01");
+        internalNotification.setSenderPaId(SENDER_PA_ID);
+        internalNotification.setNotificationStatus(NotificationStatus.ACCEPTED);
+        internalNotification.setRecipients(Collections.singletonList(notificationRecipient));
+        internalNotification.setRecipientIds(List.of(RECIPIENT_INTERNAL_ID));
+        internalNotification.setSourceChannel(X_PAGOPA_PN_SRC_CH);
+        return internalNotification;
     }
 
     private NotificationRecipient createRecipient() {
@@ -355,8 +354,8 @@ class PaymentEventsServiceTest {
                 .internalId( RECIPIENT_INTERNAL_ID )
                 .taxId( RECIPIENT_TAX_ID )
                 .denomination("Mario Rossi")
-                .recipientType( NotificationRecipient.RecipientTypeEnum.valueOf( RECIPIENT_TYPE_PF ) )
-                .digitalDomicile(NotificationDigitalAddress.builder()
+                .recipientType( NotificationRecipientV21.RecipientTypeEnum.valueOf( RECIPIENT_TYPE_PF ) )
+                .digitalDomicile(it.pagopa.pn.delivery.models.internal.notification.NotificationDigitalAddress.builder()
                         .type(NotificationDigitalAddress.TypeEnum.PEC)
                         .address("account@dominio.it")
                         .build())
